--- a/eplus004-1.html
+++ b/eplus004-1.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" /><title>スマチケ</title>
+<meta charset="UTF-8" /><title>ミリ秒時計</title>
 <meta name="Description" content="jsdo.it - share JavaScript, HTML5 and CSS - " />
 <meta name="Keywords"  content="JavaScript,HTML5,CSS" />
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
@@ -19,25 +20,16 @@ img{ max-width : 100%;}
             font-size: clamp(115%, 3vw, 195%);
         }
 
-
-p {
-    color: white;
-    background-color: #32A7B3;
-    margin-top: -0.5em;
-    text-align: center;
-    padding:5px;
-}
-
 </style>
 
 </head>
 <body>
 
-<a href="eplus003-3.html"><img src="eplus003-4.jpg"></a>
+<a href="eplus004-2.html"><img src="eplus004-1.jpg"></a>
 
 
 
-<br><br><br><br><br>
+<br><br><br><br>
 
 
 </body>
