--- a/eplus001-1.html
+++ b/eplus001-1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +5,14 @@
 <meta name="Description" content="jsdo.it - share JavaScript, HTML5 and CSS - " />
 <meta name="Keywords"  content="JavaScript,HTML5,CSS" />
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+
+<!-- ▼▼▼ 以下を追加 ▼▼▼ -->
+<link rel="manifest" href="manifest.json">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<link rel="apple-touch-icon" href="icons/icon-192.png">
+<!-- ▲▲▲ ここまで追加 ▲▲▲ -->
 
 <style type="text/css">
 
@@ -27,10 +34,7 @@ img{ max-width : 100%;}
 
 <a href="eplus001-2.html"><img src="eplus001-1.jpg"></a>
 
-
-
 <br><br><br><br>
-
 
 </body>
 </html>
